# mnemosyne_core

./: .copier-answers.yml  .coverage  .gitignore  Dockerfile  Dockerfile.base  compose.yaml  pyproject.toml
.forgejo/workflows/: ci.yml  publish-base.yml
.github/workflows/: ci.yml  publish-base.yml
constellation/: compose.yaml
src/mnemosyne_core/: __init__.py  server.py  settings.py
tests/: test_smoke.py
