[project]
name = "mnemosyne-core"
dynamic = ["version"]
description = "A standard Forge MCP service."
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Rob Fischer" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic-settings>=2.0",
    "mcp[cli]>=1.0",
    "sqlalchemy>=2.0",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "sqlite-vec>=0.1",
]

[project.urls]
Repository = "https://github.com/robfischer1/mnemosyne-core"

[project.scripts]
mnemosyne-core = "mnemosyne_core.server:main"
mnemosyne-schema-diff = "mnemosyne_core.schema_diff:main"
mnemosyne-import-guard = "mnemosyne_core.import_guard:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff==0.15.16",
    "mypy>=1.10",
    "pyright==1.1.411",
    "pre-commit>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Single-source the version: hatch reads `__version__` from the package, so
# pyproject and the package never drift. Bump the literal in __init__.py only.
[tool.hatch.version]
path = "src/mnemosyne_core/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemosyne_core"]

# Lint / type / test baseline — the canonical Forge policy
# (furnace/source/templates/pyproject.toml; furnace code-standards block).
[tool.ruff]
target-version = "py312"
line-length = 80

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM", "ISC", "Q", "E501",
    "D203", "D213",
    "ANN001", "ANN002", "ANN003", "ANN202", "ANN204", "ANN401",
    "EM", "TRY003",
    "C901", "PLR09", "PLR2004",
    "T201", "PLC0415", "FBT", "SLF001",
    "PLW0603", "TRY300", "TRY301", "ARG002",
    "PERF401", "PERF403", "A002", "EXE",
    "RUF012",  # SQLAlchemy declarative __table_args__ are class-level by design
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PT", "ANN", "D", "ARG", "PLR2004", "SLF001", "INP001", "ERA001", "E402", "PLW1510"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# C-extension deps without py.typed markers (runtime-only adapters).
module = ["pgvector.*", "sqlite_vec"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
reportUnnecessaryTypeIgnoreComment = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Coverage is measured every run; `term-missing` lists untested lines. Ratchet a
# floor up as real tests land by appending to addopts, e.g. `--cov-fail-under=70`.
addopts = "--cov=mnemosyne_core --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
branch = true
